syntax = "proto3";

option csharp_namespace = "Server";

package assistantai;

service TelegramClientService {
  rpc SendMessage(PromtRequest) returns (PromtResponse) {}
}

message PromtRequest {
  string message = 1;
}

message PromtResponse {
  string response = 1;
}